test/corpus/L1/negative/unclosed-paren.st
"---
kind: negative
section: error.unclosed-paren
codes: E_UNCLOSED_PAREN
note: parenthesised expression missing closing paren
---"
(1 + 2
